# lavandula

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  a  init.db  init.sql  install.sh  liblavu.pc  makefile  output.sql  readme.md  schema.lavender  todo.db
.github/workflows/: ci.yaml
doc/: api.md  architecture.md  authentication.md  benchmarks.md  development.md  embedded_lavandula.md  lavender.md  setup.md  sql.md  tutorial.md
doc/api/: api.md  app.md  cli.md  cors.md  dotenv.md  environment.md  errors.md  json.md  middleware.md  request_context.md  routing.md  (+3 more)
example/: dotenv.c  hello_world.c  root.c  test.c
examples/: all.c  basic.c  basic_auth.c  cors.c  crud.c  dotenv.c  hello_world.c  json.c  middleware.c  notFound.c  root.c  route_middleware.c  sql.c  static.c  static_page.c  test.c  user.c
examples/cmake/: .gitignore  CMakeLists.txt  example.c
f/: lavandula.yml  makefile
src/: api_response.c  auth.c  base64.c  cli.c  cli.h  context.c  context.h  cors.c  cors.h  dotenv.c  dotenv.h  ela.c  environment.h  http.c  http.h  json.c  json.h  lavandula.c  lavandula.h  lavandula_test.c  lavandula_test.h  lavender.c  lavender_ast.c  lavender_ast.h  lavender_lexer.c  lavender_lexer.h  lavender_parser.c  lavender_parser.h  lavender_transpiler.c  logger.c  logger.h  main.c  middleware.c  middleware.h  rate_limiter.c  request_context.c  router.c  router.h  server.c  server.h  (+8 more)
t/: lavandula.yml  makefile
test/: auth_test.c  base64_test.c  cors_test.c  http_test.c  json_test.c  lavender_lexer_test.c  lavender_parser_test.c  tests.c  utils_test.c
x/: lavandula.yml
(+143 files in other folders)
